src/ariel-os-macros/tests/ui/hook/incorrect_parameter_type.rs
#![no_main]

// FAIL: incorrect parameter type
#[ariel_os::hook(usb_builder)]
fn usb_builder(builder: usize) {}
